# gemini

./: .gitignore  Cargo.toml  build.rs  flake.nix  readme.md
codegen/: Cargo.toml
codegen/src/: main.rs
src/: interceptor.rs  lib.rs  main.rs  schema.rs  test_schema.txt
src/auth/: auth_interceptor.rs  error.rs  fetcher.rs  hyper_fetcher.rs  mod.rs  token.rs  user_account.rs
src/client/: gemini.rs  mod.rs  vertex.rs
src/request/: gemini.rs  generic.rs  image.rs  mod.rs  vertex.rs
