[package]
name = "gemini"
version = "0.0.2"
edition = "2024"

[dependencies]
anyhow = "1"
http-body-util = "0.1"
hyper = "1.8"
hyper-rustls = { version = "0.27", default-features = false, features = ["http1"] }
hyper-util = "0.1"
jsonwebtoken = "10.3"
prost = "0.14"
rustls = { version = "0.23", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros","net","signal","sync","time","rt-multi-thread"] }
tonic = { version = "0.14", default-features= false,features = ["tls-webpki-roots","channel","codegen"] }
tonic-prost = "0.14"
tracing = "0.1"
webpki-roots = "1"


[features]
default = ["aws-lc-rs"]
ring = ["rustls/ring","rustls/tls12","rustls/std","jsonwebtoken/rust_crypto" ]
aws-lc-rs = ["rustls/aws-lc-rs","rustls/tls12","rustls/std","jsonwebtoken/aws-lc-rs","jsonwebtoken/aws_lc_rs"]
